k8s/db/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      app: db-statefulset
  template:
    metadata:
      labels:
        app: db-statefulset
    spec:
      containers:
        - name: postgres
          image: postgres:14.2-bullseye
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
      volumes:
        - name: data
          emptyDir: {}
