k8s/db/db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dgk.io
      http:
        paths:
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: db-service
                port:
                  number: 5432
